<?xml version="1.0"?>
<package>
  <name>kinect_vision</name>
  <version>0.0.0</version>
  <description>The crazy_ros package</description>
  <maintainer email="marcusgreiff.93@hotmail.com">marcus</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>scipy</run_depend>
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
